--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.MuiPaper-root {
+  padding: 15px;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.top-content-space{
+  padding-top: 15px;
+}
